# labyrinth

./: Cargo.toml  README.md
assets/: map.txt
src/: algo.rs  camera.rs  main.rs  menu.rs  player.rs  world.rs
