[package]
name = "labyrinth"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.1"
bevy-inspector-egui = "0.25.2"
bevy_third_person_camera = "0.1.11"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
